<resources>
    <string name="app_name">Lesson Plan</string>
    <string name="tab_text_1">Plan</string>
    <string name="tab_text_2">School Material</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lesson_plan">I-Lesson Plan</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="course_name">COURSE NAME</string>
    <string name="title_goes_here">Years : 1</string>
    <string name="detail_goes_here">Semester : I</string>
    <string name="by_gradia">Author</string>
    <string name="on_16_jan_2012">On 16 jan 2012</string>
    <string name="enter_your_e_mail_adrress">Enter your e-mail address</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="create_doc">Create Doc</string>
    <string name="view_all">View All</string>
    <string name="create_plan">Create Plan</string>
    <string name="setting">Setting</string>
    <string name="exit">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="year_group">Academic Year</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="semester">Semester</string>
    <string name="more_details">More Details…</string>
    <string name="send">Send   </string>
    <string name="title_activity_single_post">SinglePostActivity</string>
    <string name="user_name">Gradia Mut</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
    </string>
    <string name="loremI">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Beatae dolorem fugit iure quam. Accusantium dolores eaque
        ipsam magnam modi nam nemo possimus, quae quas quo, quod rerum sequi velit veniam.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="your_comment">Your Comment...</string>
    <string name="username">User name</string>
    <string name="_16_jan_2018">16 jan 2018</string>
    <string name="subject_name">Subject Name</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_create_plan">createPlan</string>
    <string name="title">Title</string>

</resources>
